# snowforge

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: getting-started.md  index.md  mkdocs.yml
docs/api/: connection.md  exceptions.md  merge.md  profiler.md  scd.md  schema.md
snowcraft/: __init__.py  connection.py  exceptions.py  merge.py  profiler.py  scd.py  schema.py  utils.py
tests/: conftest.py
tests/integration/: test_merge_integration.py  test_schema_integration.py
tests/unit/: test_connection.py  test_merge.py  test_profiler.py  test_scd.py  test_schema.py
